--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,13 @@
 
 body {
   font-family: "Nunito", sans-serif;
-  font-weight: 400; /* Regular weight */
+  font-weight: 400; 
 }
 
 h1,
 h2,
 h3 {
-  font-weight: 700; /* Bold weight for headings */
+  font-weight: 700;
 }
 
 :root {
@@ -20,6 +20,7 @@ h3 {
   --black: #000000;
   --white: #ffffff;
   --border: #5f3bee81;
+  --light-border: #c5eeff;
   --secondary: #006b6a;
 
 }
@@ -27,7 +28,7 @@ h3 {
   font-family: "Nunito", sans-serif;
   display: inline-block;
   padding: 14px 32px;
-  font-size: 16px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
@@ -78,7 +79,7 @@ h3 {
   color: var(--github);
   background-color: var(--white);
 }
-/* Global CSS Ends */
+
 /* Main Headings */
 
 /* Heading 1 */
@@ -94,7 +95,7 @@ h2 {
   line-height: 58px;
 }
 /* Heading 3 */
-h2 {
+h3 {
   font-size: 24px;
   font-weight: 700;
   line-height: 34px;
@@ -145,18 +146,6 @@ h2 {
   font-weight: 600;
   line-height: 24px;
 }
-/* Section Titles Ends */
-
-/* Navbar Style Start */
-
-/* Navbar Styler Ends */
-
-/* Hero Section Style */
-
-/* Hero Section Style Ends */
-
-
-
 
 .section--title {
   font-size: 24px;
@@ -208,20 +197,12 @@ h2 {
   font-weight: 400;
   line-height: 150%;
 }
-/* Testimonial Ends */
 
-/* Contact End */
-
-/* Footer Start */
-/* Footer Starts */
 
 
 /* Responsive Screens */
 @media only screen and (max-width: 1800px) {
-  .hero--section--title {
-    font-size: 68px;
-    line-height: 70px;
-  }
+  
   .skills--section--title {
     font-size: 28px;
     line-height: 40px;
@@ -328,7 +309,3 @@ h2 {
   }
 }
 
-
-
-
-/* Responsive Screens Ends*/
