--- a/src/Pages/Home/Hero/HeroSection.css
+++ b/src/Pages/Home/Hero/HeroSection.css
@@ -1,7 +1,7 @@
 .hero--section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding: 133.333px 85.333px 133.333px;
+    padding: 163.333px 85.333px 133.333px;
     align-items: center;
     justify-content: space-between;
     gap: 32px;
@@ -27,6 +27,8 @@
     font-size: 74.667px;
     font-weight: 700;
     line-height: 90px;
+    /* margin-bottom: 5px;
+    margin-top: 10px; */
     align-self: stretch;
   }
   .hero--section--title--color {
@@ -45,3 +47,38 @@
     width: 100%;
     height: 100%;
   }
+
+  @media (max-width : 768px){
+    .hero--section {
+      padding: 133.333px 85.333px 133.333px;
+      gap: 32px;
+    }
+    .hero--section--content-box {
+      gap: 32px;
+    }
+    .hero--section--content--box > button {
+      margin-top: 21.333px;
+    }
+    .hero--section--title {
+      color: var(--heading-color);
+      font-size: 74.667px;
+      font-weight: 700;
+      line-height: 90px;
+      margin-bottom: 5px;
+      margin-top: 10px;
+      align-self: stretch;
+    }
+   
+    .hero--section-description {
+      color: var(--darkblue);
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 36px;
+    }
+    
+    .hero--section--img > img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  
