--- a/src/Pages/Home/Skills/MySkills.css
+++ b/src/Pages/Home/Skills/MySkills.css
@@ -1,7 +1,7 @@
 /* Skills Section Style */
 .skills--section {
     display: flex;
-    padding: 149.33px 85.33px;
+    padding: 45.33px 140.33px;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -17,18 +17,19 @@
     display: grid;
     justify-content: center;
     align-items: flex-start;
-    gap: 42px;
-    grid-template-columns: repeat(4, 1fr);
+    gap: 12px;
+    grid-template-columns: repeat(3, 1fr);
   }
   .skills--section--card {
     display: flex;
     padding: 32px;
     flex-direction: column;
     align-items: flex-start;
-    gap: 32px;
+    gap: 12px;
     flex: 1 0 0;
     border-radius: 10.6px;
     background: var(--bg-shade);
+    min-width: 450px;
     min-height: 250px;
   }
   .skills--section--card:hover {
@@ -42,7 +43,7 @@
     padding: 13.3px;
     justify-content: center;
     align-items: center;
-    gap: 13.3px;
+    gap: 12px;
     border-radius: 10.6px;
     background: #fff;
     box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
@@ -51,14 +52,14 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 32px;
+    gap: 12px;
     align-self: stretch;
   }
   .skills--section--title {
     color: var(--heading-color);
     font-size: 32px;
     font-weight: 700;
-    line-height: 45px;
+    line-height: 12px;
   }
   .skills--section--skills {
     display: flex;
@@ -66,17 +67,48 @@
   }
   .skills--section--skill {
     border: 1px solid var(--border);
-    font-size: 14px;
+    font-size: 16px;
     padding: 4px;
     border-radius: 5px;
     margin-right: 10px; 
-    margin-bottom: 10px; 
+    margin-bottom: 5px; 
   }
   .skills--section--description {
     color: var(--black);
     font-size: 21.3px;
     font-style: normal;
     font-weight: 400;
-    line-height: 32px;
+    line-height: 12px;
   }
-  /* Skills Style Ends */
+  .skills--section--card.skeleton .skills--section--skill {
+    position: relative; /* Ensure position for pseudo-element */
+    overflow: hidden; /* Hide overflow to clip animation */
+    background-color: var( --light-border); /* Light gray background color */
+  }
+  
+  .skills--section--card.skeleton .skills--section--skill::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%; /* Start from left outside the span */
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(
+      135deg,
+      transparent 25%,
+      rgba(255, 255, 255, 0.8) 40%,
+      transparent 50%
+    );
+    /* animation: spark-animation 1s infinite linear;  */
+    animation: spark-animation 1s linear forwards;
+  }
+  
+  @keyframes spark-animation {
+    0% {
+      left: -100%; /* Start from left outside the span */
+    }
+    100% {
+      left: 100%; /* Move to right outside the span */
+    }
+  }
+  
