--- a/src/Pages/Home/Footer/Footer.css
+++ b/src/Pages/Home/Footer/Footer.css
@@ -22,6 +22,7 @@
   }
   .footer--items ul > li > a {
     text-decoration: none;
+    cursor: pointer;
   }
   .footer--social--icon > ul {
     list-style: none;
