--- a/src/Pages/Home/Projects/MyProjects.css
+++ b/src/Pages/Home/Projects/MyProjects.css
@@ -31,12 +31,13 @@
   }
   .portfolio--section--img > img {
     width: 100%;
+    height: 300px;
   }
   .portfolio--section--card {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 32px;
+    /* gap: 32px; */
     flex: 1 0 0;
     background: #fff;
     box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
@@ -62,7 +63,66 @@
     border-bottom: 1.33px solid var(--primary);
     padding-bottom: 10.6px;
     font-weight: 600;
+    margin-bottom: 10px;
+
   }
   .portfolio--section--card:hover path {
     stroke: #006b6a;
   }
+
+  .btn--github {
+    color: var(--white);
+    background-color: var(--primary);
+    border: 1px solid var(--primary);
+    padding: 10px;
+    border-radius: 4px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    transition: background-color 0.5s;
+    -webkit-transition: background-color 0.5s;
+    -moz-transition: background-color 0.5s;
+    -ms-transition: background-color 0.5s;
+    -o-transition: background-color 0.5s;
+  }
+  .btn--github:hover {
+    color: var(--primary);
+    background-color: var(--white);
+  }
+
+
+  .btn--live {
+   
+    border: 1px solid var(--primary);
+
+    color: var(--primary);
+    background-color: var(--white);
+    padding: 10px;
+    border-radius: 4px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    transition: background-color 0.5s;
+    -webkit-transition: background-color 0.5s;
+    -moz-transition: background-color 0.5s;
+    -ms-transition: background-color 0.5s;
+    -o-transition: background-color 0.5s;
+    
+  }
+  .btn--live:hover {
+    color: var(--white);
+    background-color: var(--primary);
+  }
+  
+  .buttons-container {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .btn--github, .btn--live {
+    padding: 10px 20px;
+    cursor: pointer;
+  }  
+ 
