--- a/src/Pages/Home/Footer/Footer.css
+++ b/src/Pages/Home/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer--container {
     display: flex;
-    padding: 106.667px 85.333px;
+    padding: 30px 85px;
     flex-direction: column;
     align-items: flex-start;
     background: var(--bg-shade);
@@ -33,17 +33,12 @@
     flex-shrink: 0;
     text-decoration: none;
   }
-  .divider {
-    margin: 106px 0 42.67px;
-    height: 1.333px;
-    width: 100%;
-    background: rgba(40, 41, 56, 0.55);
-  }
+ 
   .footer--content--container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    align-self: stretch;
+margin-top: 20px;
   }
   .footer--content {
     color: var(--black);
