--- a/src/Pages/Home/Hero/HeroSection.css
+++ b/src/Pages/Home/Hero/HeroSection.css
@@ -1,84 +1,109 @@
 .hero--section {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 80px 85px ;
-    align-items: center;
-    justify-content: space-between;
-    gap: 32px;
-    background-color: var(--bg-shade);
-  }
-  .hero--section--content-box {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-  }
-  .hero--section--content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0;
-  }
-  .hero--section--content--box > button {
-    margin-top: 21.333px;
-  }
-  .hero--section--title {
-    color: var(--heading-color);
-    font-size: 74.667px;
-    font-weight: 700;
-    line-height: 90px;
-    /* margin-bottom: 5px;
-    margin-top: 10px; */
-    align-self: stretch;
-  }
-  .hero--section--title--color {
-    color: var(--primary);
-  }
-  .hero--section-description {
-    color: var(--darkblue);
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 36px;
-  }
-  .hero--section--img {
-    display: flex;
-  }
-  .hero--section--img > img {
-    width: 100%;
-    height: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 80px 85px;
+  align-items: center;
+  justify-content: space-between;
+  gap: 32px;
+  background-color: var(--bg-shade);
+  margin-top: 25px;
+}
+
+.hero--section--content-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+}
+.hero--section--img-dummy{
+  display: none;
+}
+.hero--section--content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0;
+}
+.section--title{
+  font-size: 20.667px;
+
+}
+
+.hero--section--content--box > button {
+  margin-top: 21.333px;
+}
+
+.hero--section--title {
+  color: var(--heading-color);
+  font-size: 74.667px;
+  font-weight: 700;
+  line-height: 90px;
+  align-self: stretch;
+}
+.hero--section--title-dummy {
+ display: none;
+}
+
+.hero--section--title--color {
+  color: var(--primary);
+}
+
+.hero--section-description {
+  color: var(--darkblue);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
+}
+
+.hero--section--img {
+  display: flex;
+}
+
+.hero--section--img > img {
+  width: 80%;
+  height: 80%;
+}
+
+@media (max-width: 768px) {
+  .hero--section {
+    grid-template-columns: 1fr;
+    padding: 60px 40px;
+    text-align: center;
   }
 
-  @media (max-width : 768px){
-    .hero--section {
-      padding: 133.333px 85.333px 133.333px;
-      gap: 32px;
-    }
-    .hero--section--content-box {
-      gap: 32px;
-    }
-    .hero--section--content--box > button {
-      margin-top: 21.333px;
-    }
-    .hero--section--title {
-      color: var(--heading-color);
-      font-size: 74.667px;
-      font-weight: 700;
-      line-height: 90px;
-      margin-bottom: 5px;
-      margin-top: 10px;
-      align-self: stretch;
-    }
-   
-    .hero--section-description {
-      color: var(--darkblue);
-      font-size: 24px;
-      font-weight: 400;
-      line-height: 36px;
-    }
-    
-    .hero--section--img > img {
-      width: 100%;
-      height: 100%;
-    }
+  .hero--section--content-box {
+    align-items: center;
   }
-  
+
+  .hero--section--title-dummy {
+    display: block;
+    display: flex;
+    font-size: 22px;
+    line-height: 0px;
+    margin-left: 10px;
+    
+  }
+  .hero--section--title {
+   display: none;
+  }
+
+
+  .hero--section-description {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .hero--section--img {
+    display: none;
+  }
+
+  .hero--section--img-dummy {
+    display: block;
+  }
+  .hero--section--img-dummy > img {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+
+}
